WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25133
Fix binding oops and clean up InspectorController parts
https://bugs.webkit.org/show_bug.cgi?id=25133
Summary
Fix binding oops and clean up InspectorController parts
Dimitri Glazkov (Google)
Reported
2009-04-10 13:58:32 PDT
Just some things that I noticed while writing V8 bindings.
Attachments
Misc cleanup in Inspector-land, v1.
(5.08 KB, patch)
2009-04-10 14:08 PDT
,
Dimitri Glazkov (Google)
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-04-10 14:08:00 PDT
Created
attachment 29397
[details]
Misc cleanup in Inspector-land, v1. WebCore/ChangeLog | 19 +++++++++++++++++++ .../bindings/js/JSInspectorControllerCustom.cpp | 2 +- WebCore/bindings/js/ScriptObject.cpp | 17 ++++++----------- WebCore/bindings/js/ScriptObject.h | 3 ++- WebCore/inspector/ConsoleMessage.cpp | 1 - WebCore/inspector/ConsoleMessage.h | 1 - WebCore/inspector/InspectorResource.cpp | 2 +- 7 files changed, 29 insertions(+), 16 deletions(-)
Dimitri Glazkov (Google)
Comment 2
2009-04-10 15:27:41 PDT
Landed as
http://trac.webkit.org/changeset/42408
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug