WebCore/bindings/js/JSInspectorControllerCustom.cpp
@@ -277,7 +277,7 @@ JSValuePtr JSInspectorController::setSetting(ExecState* exec, const ArgList& arg
 
     InspectorController::Setting setting;
 
-    JSValuePtr value = args.at(exec, 0);
+    JSValuePtr value = args.at(exec, 1);
     if (value.isUndefined() || value.isNull()) {
         // Do nothing. The setting is already NoType.
         ASSERT(setting.type() == InspectorController::Setting::NoType);
